fix(web) : fixed wrap of words that are too long

--- a/apps/ull/src/styles.scss
+++ b/apps/ull/src/styles.scss
@@ -17,6 +17,9 @@ a, a:hover, a:focus, a:active {
 
 p, h1, h2, h3, h4, h5, h6 {
   white-space: pre-wrap;
+  overflow-wrap: break-word;
+  word-break: break-word;
+  hyphens: auto;
 }
 
 img {
